[gd_scene load_steps=13 format=3 uid="uid://css3hvxb7m5hu"]

[ext_resource type="Texture2D" uid="uid://bvpxu1sw55qwl" path="res://Assets/Background/Green.png" id="1_vqe4n"]
[ext_resource type="Script" path="res://Escenas/Levels/niveles.gd" id="1_wtdir"]
[ext_resource type="Texture2D" uid="uid://cjdcho2fxw4u6" path="res://Assets/Terrain/Terrain (16x16).png" id="2_gsyk4"]
[ext_resource type="PackedScene" uid="uid://dq65iyu2hj4jr" path="res://Escenas/Characters/main_character.tscn" id="3_xy3sk"]
[ext_resource type="PackedScene" uid="uid://dndh7qcvyq8dn" path="res://Escenas/Objects/banana.tscn" id="4_cvkdc"]
[ext_resource type="PackedScene" uid="uid://dnv4ndcqbre23" path="res://Escenas/Objects/final.tscn" id="6_qavuu"]
[ext_resource type="PackedScene" uid="uid://clfwfg0x3meou" path="res://Escenas/Levels/nivel_2.tscn" id="7_7xf6t"]
[ext_resource type="PackedScene" uid="uid://cs207bwpw502g" path="res://Escenas/Characters/enemy.tscn" id="8_5bbvj"]
[ext_resource type="Texture2D" uid="uid://cccpl6v780bak" path="res://Assets/Items/Fruits/Strawberry-1.png" id="8_g1wpl"]
[ext_resource type="AudioStream" uid="uid://dykh8o0mxs1po" path="res://Sounds/level_music.mp3" id="11_fqojm"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_4rak4"]
texture = ExtResource("2_gsyk4")
0:0/0 = 0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:0/0 = 0
1:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:0/0 = 0
2:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:0/0 = 0
3:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:0/0 = 0
4:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
6:0/0 = 0
6:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
7:0/0 = 0
7:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
8:0/0 = 0
8:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
9:0/0 = 0
9:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
10:0/0 = 0
10:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
12:0/0 = 0
13:0/0 = 0
14:0/0 = 0
15:0/0 = 0
17:0/0 = 0
18:0/0 = 0
19:0/0 = 0
0:1/0 = 0
0:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:1/0 = 0
1:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:1/0 = 0
2:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:1/0 = 0
3:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:1/0 = 0
4:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
6:1/0 = 0
6:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
7:1/0 = 0
7:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
8:1/0 = 0
8:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
9:1/0 = 0
9:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
10:1/0 = 0
10:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
12:1/0 = 0
13:1/0 = 0
14:1/0 = 0
15:1/0 = 0
17:1/0 = 0
17:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
18:1/0 = 0
18:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
19:1/0 = 0
19:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
0:2/0 = 0
0:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:2/0 = 0
1:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:2/0 = 0
2:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
6:2/0 = 0
6:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
7:2/0 = 0
7:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
8:2/0 = 0
8:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
13:2/0 = 0
14:2/0 = 0
15:2/0 = 0
17:2/0 = 0
18:2/0 = 0
19:2/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
6:4/0 = 0
7:4/0 = 0
8:4/0 = 0
9:4/0 = 0
10:4/0 = 0
12:4/0 = 0
13:4/0 = 0
14:4/0 = 0
15:4/0 = 0
17:4/0 = 0
18:4/0 = 0
19:4/0 = 0
20:4/0 = 0
21:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
6:5/0 = 0
7:5/0 = 0
8:5/0 = 0
9:5/0 = 0
10:5/0 = 0
12:5/0 = 0
13:5/0 = 0
14:5/0 = 0
15:5/0 = 0
17:5/0 = 0
18:5/0 = 0
19:5/0 = 0
20:5/0 = 0
21:5/0 = 0
0:6/0 = 0
1:6/0 = 0
2:6/0 = 0
6:6/0 = 0
7:6/0 = 0
8:6/0 = 0
13:6/0 = 0
14:6/0 = 0
15:6/0 = 0
17:6/0 = 0
18:6/0 = 0
19:6/0 = 0
0:8/0 = 0
1:8/0 = 0
2:8/0 = 0
3:8/0 = 0
4:8/0 = 0
6:8/0 = 0
7:8/0 = 0
8:8/0 = 0
9:8/0 = 0
10:8/0 = 0
12:8/0 = 0
13:8/0 = 0
14:8/0 = 0
15:8/0 = 0
17:8/0 = 0
18:8/0 = 0
19:8/0 = 0
20:8/0 = 0
0:9/0 = 0
1:9/0 = 0
2:9/0 = 0
3:9/0 = 0
4:9/0 = 0
6:9/0 = 0
7:9/0 = 0
8:9/0 = 0
9:9/0 = 0
10:9/0 = 0
12:9/0 = 0
13:9/0 = 0
14:9/0 = 0
15:9/0 = 0
17:9/0 = 0
18:9/0 = 0
19:9/0 = 0
20:9/0 = 0
0:10/0 = 0
1:10/0 = 0
2:10/0 = 0
6:10/0 = 0
7:10/0 = 0
8:10/0 = 0
13:10/0 = 0
14:10/0 = 0
15:10/0 = 0
18:10/0 = 0
19:10/0 = 0
20:10/0 = 0

[sub_resource type="TileSet" id="TileSet_dorvd"]
physics_layer_0/collision_layer = 1
sources/0 = SubResource("TileSetAtlasSource_4rak4")

[node name="Node" type="Node"]
script = ExtResource("1_wtdir")

[node name="SceneObjects" type="Node" parent="."]

[node name="TextureRect" type="TextureRect" parent="SceneObjects"]
texture_filter = 1
offset_left = -45.0
offset_top = -45.0
offset_right = 2157.0
offset_bottom = 620.0
texture = ExtResource("1_vqe4n")
stretch_mode = 1

[node name="TileMap" type="TileMap" parent="SceneObjects"]
texture_filter = 1
scale = Vector2(3, 3)
tile_set = SubResource("TileSet_dorvd")
format = 2
layer_0/tile_data = PackedInt32Array(393216, 458752, 0, 458752, 458752, 1, 524288, 458752, 1, 589824, 458752, 1, 655360, 458752, 1, 720896, 458752, 2, 786432, 458752, 0, 458753, 393216, 0, 524289, 458752, 1, 589825, 458752, 1, 655361, 458752, 1, 720897, 458752, 2, 786433, 458752, 0, 458754, 458752, 0, 524290, 458752, 1, 589826, 458752, 1, 655362, 524288, 1, 720898, 524288, 2, 786434, 458752, 0, 524291, 524288, 1, 589827, 524288, 2, 786435, 458752, 0, 327686, 458752, 2, 327687, 524288, 2, 524298, 458752, 2, 524299, 524288, 2, 786445, 458752, 0, 786446, 458752, 0, 720911, 458752, 2, 786447, 458752, 0, 720912, 524288, 2, 786448, 458752, 0, 786449, 458752, 0, 720916, 393216, 2, 720917, 524288, 2, 786453, 458752, 0, 786454, 458752, 0, 655385, 458752, 1, 720921, 458752, 2, 786457, 458752, 0, 655386, 524288, 1, 720922, 524288, 2, 786458, 458752, 0, 786459, 458752, 0, 30, 1114112, 1342177280, 524319, 393216, 0, 589856, 458752, 2, 589857, 524288, 2, 34, 1245184, 1610612736, 786469, 458752, 0, 458790, 524288, 2, 786470, 458752, 0, 720935, 458752, 1, 786471, 458752, 0, 720936, 524288, 1, 786472, 458752, 0, 720937, 393216, 2, 786473, 458752, 0, 327722, 458752, 1, 393258, 458752, 1, 458794, 458752, 1, 524330, 458752, 1, 589866, 458752, 0, 655402, 458752, 1, 720938, 458752, 2, 786474, 458752, 0, 327723, 524288, 1, 393259, 524288, 1, 458795, 524288, 1, 524331, 524288, 1, 589867, 524288, 0, 655403, 524288, 1, 720939, 524288, 2, 786475, 458752, 0, 44, 393216, 1, 327724, 393216, 1, 393260, 393216, 1, 458796, 393216, 1, 524332, 393216, 1, 589868, 393216, 1, 655404, 393216, 1, 720940, 393216, 1, 786476, 458752, 0, -1, 458752, 1, 65535, 524288, 1, 131071, 524288, 1, 196607, 524288, 1, 262143, 524288, 1, 327679, 524288, 1, 393215, 524288, 1, 458751, 524288, 1, 524287, 524288, 1, 589823, 524288, 1, 655359, 524288, 1, 720895, 524288, 1, 786431, 524288, 1, 851967, 458752, 0, -65536, 458752, 2, -65535, 458752, 2, 393217, 524288, 0, -65534, 458752, 2, -65533, 458752, 2, 458755, 524288, 0, -65532, 458752, 2, 786436, 458752, 0, -65531, 458752, 2, 262149, 393216, 0, 327685, 393216, 2, 786437, 458752, 0, -65530, 458752, 2, 262150, 458752, 0, 786438, 458752, 0, -65529, 458752, 2, 262151, 524288, 0, 786439, 458752, 0, -65528, 458752, 2, 786440, 458752, 0, -65527, 458752, 2, 458761, 393216, 0, 524297, 393216, 2, 786441, 458752, 0, -65526, 458752, 2, 458762, 458752, 0, 786442, 458752, 0, -65525, 458752, 2, 458763, 524288, 0, 786443, 458752, 0, -65524, 458752, 2, 720908, 393216, 0, 786444, 458752, 0, -65523, 458752, 2, 720909, 458752, 0, -65522, 458752, 2, 655374, 393216, 0, 720910, 393216, 2, -65521, 458752, 2, 655375, 458752, 0, -65520, 458752, 2, 655376, 524288, 0, -65519, 458752, 2, 655377, 1114112, 1, -65518, 458752, 2, 655378, 1179648, 1, 786450, 458752, 0, -65517, 458752, 2, 655379, 1245184, 1, 786451, 458752, 0, -65516, 458752, 2, 655380, 393216, 0, 786452, 458752, 0, -65515, 458752, 2, 655381, 524288, 0, -65514, 458752, 2, -65513, 458752, 2, 786455, 458752, 0, -65512, 458752, 2, 589848, 393216, 0, 655384, 393216, 1, 720920, 393216, 2, 786456, 458752, 0, -65511, 458752, 2, 589849, 458752, 0, -65510, 458752, 2, 589850, 524288, 0, -65509, 458752, 2, -65508, 458752, 2, 786460, 458752, 0, -65507, 458752, 2, 786461, 458752, 0, -65506, 458752, 2, 65566, 1179648, 1342177280, 131102, 1179648, 1342177280, 196638, 1179648, 1342177280, 262174, 1179648, 1342177280, 327710, 1179648, 1342177280, 393246, 1179648, 1342177280, 458782, 1245184, 1342177280, 786462, 458752, 0, -65505, 458752, 2, 589855, 393216, 2, 786463, 458752, 0, -65504, 458752, 2, 524320, 458752, 0, 786464, 458752, 0, -65503, 458752, 2, 524321, 524288, 0, 786465, 458752, 0, -65502, 458752, 2, 65570, 1179648, 1610612736, 131106, 1179648, 1610612736, 196642, 1179648, 1610612736, 262178, 1179648, 1610612736, 327714, 1179648, 1610612736, 393250, 1179648, 1610612736, 458786, 1114112, 1610612736, 786466, 458752, 0, -65501, 458752, 2, 786467, 458752, 0, -65500, 458752, 2, 720932, 393216, 0, 786468, 458752, 0, -65499, 458752, 2, 393253, 393216, 0, 458789, 393216, 2, 720933, 524288, 0, -65498, 458752, 2, 393254, 524288, 0, 655398, 393216, 0, 720934, 393216, 1, -65497, 458752, 2, 655399, 458752, 0, -65496, 458752, 2, 655400, 524288, 0, -65495, 458752, 2, 262185, 393216, 0, 327721, 393216, 1, 393257, 393216, 1, 458793, 393216, 1, 524329, 393216, 1, 589865, 393216, 0, 655401, 393216, 1, -65494, 458752, 2, 262186, 458752, 0, -65493, 458752, 2, 262187, 524288, 0, -65492, 458752, 2, 65580, 393216, 1, 131116, 393216, 1, 196652, 393216, 1, 262188, 393216, 1)

[node name="CharacterBody2D" parent="SceneObjects" instance=ExtResource("3_xy3sk")]
position = Vector2(243, 527)

[node name="Camera2D" type="Camera2D" parent="SceneObjects/CharacterBody2D"]
position_smoothing_enabled = true

[node name="Bananas" type="Node" parent="SceneObjects"]

[node name="Banana" parent="SceneObjects/Bananas" instance=ExtResource("4_cvkdc")]
position = Vector2(446, 544)

[node name="Banana2" parent="SceneObjects/Bananas" instance=ExtResource("4_cvkdc")]
position = Vector2(739, 448)

[node name="Banana3" parent="SceneObjects/Bananas" instance=ExtResource("4_cvkdc")]
position = Vector2(1008, 454)

[node name="Banana4" parent="SceneObjects/Bananas" instance=ExtResource("4_cvkdc")]
position = Vector2(505, 307)

[node name="Banana5" parent="SceneObjects/Bananas" instance=ExtResource("4_cvkdc")]
position = Vector2(311, 157)

[node name="Banana6" parent="SceneObjects/Bananas" instance=ExtResource("4_cvkdc")]
position = Vector2(46, 259)

[node name="Banana7" parent="SceneObjects/Bananas" instance=ExtResource("4_cvkdc")]
position = Vector2(1232, 400)

[node name="Banana8" parent="SceneObjects/Bananas" instance=ExtResource("4_cvkdc")]
position = Vector2(1563, 352)

[node name="Banana9" parent="SceneObjects/Bananas" instance=ExtResource("4_cvkdc")]
position = Vector2(1828, 252)

[node name="Final" parent="SceneObjects" instance=ExtResource("6_qavuu")]
position = Vector2(2040, 95)
target_level = ExtResource("7_7xf6t")

[node name="Enemigos" type="Node" parent="SceneObjects"]

[node name="Cerdo" parent="SceneObjects/Enemigos" instance=ExtResource("8_5bbvj")]
position = Vector2(884, 428)

[node name="Cerdo2" parent="SceneObjects/Enemigos" instance=ExtResource("8_5bbvj")]
position = Vector2(1392, 527)

[node name="UI" type="CanvasLayer" parent="."]

[node name="Panel" type="Panel" parent="UI"]
anchors_preset = -1
anchor_left = -0.046875
anchor_top = -0.0848765
anchor_right = -0.046875
anchor_bottom = -0.0848765
offset_left = 67.0
offset_top = 69.0
offset_right = 318.0
offset_bottom = 165.0
metadata/_edit_use_anchors_ = true
metadata/_edit_group_ = true

[node name="PointsLabel" type="Label" parent="UI/Panel"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 30
text = "Puntos: 0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Vida" type="Panel" parent="UI"]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -329.0
offset_top = 14.0
offset_right = -45.0
offset_bottom = 106.0
grow_horizontal = 0
metadata/_edit_group_ = true

[node name="HBoxContainer" type="HBoxContainer" parent="UI/Vida"]
layout_mode = 0
offset_right = 332.0
offset_bottom = 92.0

[node name="Corazon" type="TextureRect" parent="UI/Vida/HBoxContainer"]
texture_filter = 1
layout_mode = 2
texture = ExtResource("8_g1wpl")
expand_mode = 2

[node name="Corazon2" type="TextureRect" parent="UI/Vida/HBoxContainer"]
texture_filter = 1
layout_mode = 2
texture = ExtResource("8_g1wpl")
expand_mode = 2

[node name="Corazon3" type="TextureRect" parent="UI/Vida/HBoxContainer"]
texture_filter = 1
layout_mode = 2
texture = ExtResource("8_g1wpl")
expand_mode = 2
metadata/_edit_use_anchors_ = true

[node name="Musica" type="AudioStreamPlayer" parent="."]
stream = ExtResource("11_fqojm")
volume_db = -17.0
